--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body id="body">
         <!-- Hight scores -->
         <div>
-            <button class="display-high-scores">Display high scores</button>
+            <button class="display-high-scores">High score</button>
         </div>
         <!-- All content of the quiz-->
         <div>
@@ -22,7 +22,7 @@
             </div>
         </div>
         <!-- Timer -->
-        <div id="time">Time:<span id="timer">0</span></div>
+        <div id="time">Time left:<span id="timer">0</span></div>
     <script src="./assets/js/script.js"></script>  
 </body>
 </html>
