--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body id="body">
         <!-- Hight scores -->
         <div>
-            <button class="display-high-scores">High score</button>
+            <button class="display-score">High score</button>
         </div>
         <!-- All content of the quiz-->
         <div>
